--- a/WordCard.ui
+++ b/WordCard.ui
@@ -16,6 +16,12 @@
     <height>250</height>
    </size>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>600</width>
+    <height>250</height>
+   </size>
+  </property>
   <property name="sizeIncrement">
    <size>
     <width>600</width>
